# TR_CV_2023-TEST-

./: CMakeLists.txt
config/: yolov5_det
include/auto_aim/: Camera.h  YOLO.h
src/: Camera.cpp  YOLO.cpp  main.cpp
yolov5/: yolov5_det.cpp  yolov5_det_cuda_python.py  yolov5_det_trt.py
yolov5/src/: postprocess.cpp  postprocess.h
